2011-10-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-encode-string, w3m-url-transfer-encode-string):
	Restore optional coding argument.
	(w3m-gmane-url-at-point, w3m-canonicalize-url): Do.
	(w3m-download): Decode file name in url.

	* w3m-form.el (w3m-form-make-form-data, w3m-form-parse-and-fontify):
	* w3m-search.el (w3m-search-escape-query-string, w3m-search-do-search)
	(w3m-search-uri-replace): Revert last change.

2011-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-coding-system-alist): New user option.
	(w3m-show-decoded-url, w3m-google-feeling-lucky-charset): Abolish.
	(w3m-url-coding-system): New function.
	(w3m-url-encode-string, w3m-url-readable-string)
	(w3m-url-transfer-encode-string): Use it.

	* w3m.el (w3m-fontify-anchors, w3m-gmane-url-at-point)
	(w3m-canonicalize-url, w3m-goto-url):
	* w3m-form.el (w3m-form-make-form-data, w3m-form-parse-and-fontify):
	* w3m-search.el (w3m-search-escape-query-string, w3m-search-do-search)
	(w3m-search-uri-replace): Don't specify coding system for encoding url.

2011-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-type): Prefer gif.
	(w3m-favicon-convert): Work for gif icons named "favicon.ico".

2011-09-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-lnum.el (w3m-lnum-face): Remove face alias.
	(w3m-lnum-quick-browsing): Add custom type.
	(w3m-lnum-remove-overlays, w3m-lnum-set-numbering)
	(w3m-lnum-highlight-anchor, w3m-lnum-get-match-info): Fix overlay end
	range, too.

2011-09-07  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m.el: Use `w3m-lnum' as naming prefix for commands and
	maps from `w3m-lnum.el'.

	* w3m-lnum.el: Use `w3m-lnum' as naming prefix everywhere instead of
	`w3m-linknum' or `w3m-link-numbering'.
	(w3m-lnum-set-numbering, w3m-lnum): Optionally don't clean previous
	numbering.
	(w3m-lnum-read-interactive): Don't clean previous numbering with
	`w3m-lnum' in cases when there is no such.